--- a/Conversion Master_dev/Resources/DensityData.plist
+++ b/Conversion Master_dev/Resources/DensityData.plist
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <!--
-   AccelerationData.plist
-   Conversion Master_dev
-
-   Created by Seth Cohen on 1/8/17.
-   Copyright (c) 2017 Seth Cohen. All rights reserved.
--->
+ DensityData.plist
+ Conversion Master_dev
+ 
+ Created by Seth Cohen on 1/8/17.
+ Copyright (c) 2017 Seth Cohen. All rights reserved.
+ -->
 <plist version="1.0">
+  <dict>
+    <key>converter</key>
+    <string>gain</string>
+    <key>basis</key>
+    <string>gram/centimeter^3</string>
+    <key>map</key>
     <dict>
-    
+      <key>gram/centimeter^3</key>
+      <real>1</real>
+      <key>gram/meter^3</key>
+      <real>1000000</real>
+      <key>kilogram/meter^3</key>
+      <real>1000</real>
+      <key>milligram/meter^3</key>
+      <real>1000000000</real>
+      <key>ounce/gallon</key>
+      <real>133.5265</real>
+      <key>pound/foot^3</key>
+      <real>62.427959999999999</real>
+      <key>pound/inch^3</key>
+      <real>0.036127289999999999</real>
+      <key>ton/yard</key>
+      <real>1.4417690000000001</real>
     </dict>
+  </dict>
 </plist>
