--- a/Conversion Master_dev/Resources/FlowData.plist
+++ b/Conversion Master_dev/Resources/FlowData.plist
@@ -1,5 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+  <dict>
+    <key>converter</key>
+    <string>gain</string>
+    <key>basis</key>
+    <string>gallon/minute</string>
+    <key>map</key>
+    <dict>
+      <key>cm^3/hour</key>
+      <real>227124.70000000001</real>
+      <key>cm^3/minute</key>
+      <real>3785.4119999999998</real>
+      <key>cm^3/second</key>
+      <real>63.090200000000003</real>
+      <key>foot^3/hour</key>
+      <real>8.0208329999999997</real>
+      <key>foot^3/minute</key>
+      <real>0.13368060000000001</real>
+      <key>foot^3/second</key>
+      <real>0.002228009</real>
+      <key>gallon(UK)/day</key>
+      <real>1199.05</real>
+      <key>gallon(UK)/hour</key>
+      <real>49.960430000000002</real>
+      <key>gallon(UK)/minute</key>
+      <real>0.83267380000000002</real>
+      <key>gallon(UK)/second</key>
+      <real>0.0138779</real>
+      <key>gallon/day</key>
+      <real>1440</real>
+      <key>gallon/hour</key>
+      <real>60</real>
+      <key>gallon/minute</key>
+      <real>1</real>
+      <key>gallon/second</key>
+      <real>0.016666670000000001</real>
+      <key>liter/day</key>
+      <real>5450.9930000000004</real>
+      <key>liter/hour</key>
+      <real>227.12469999999999</real>
+      <key>liter/minute</key>
+      <real>3.785412</real>
+      <key>liter/second</key>
+      <real>0.063090199999999999</real>
+      <key>meter^3/day</key>
+      <real>5.4509930000000004</real>
+      <key>meter^3/hour</key>
+      <real>0.22712470000000001</real>
+      <key>meter^3/minute</key>
+      <real>0.0037854120000000002</real>
+      <key>meter^3/second</key>
+      <real>6.3090199999999994e-05</real>
+      <key>milliliter/hour</key>
+      <real>227124.70000000001</real>
+      <key>milliliter/minute</key>
+      <real>3785.4119999999998</real>
+      <key>milliliter/second</key>
+      <real>63.090200000000003</real>
+      <key>ounce(UK)/hour</key>
+      <real>7993.6689999999999</real>
+      <key>ounce(UK)/minute</key>
+      <real>133.2278</real>
+      <key>ounce(UK)/second</key>
+      <real>2.2204640000000002</real>
+      <key>ounce/hour</key>
+      <real>7680</real>
+      <key>ounce/minute</key>
+      <real>128</real>
+      <key>ounce/second</key>
+      <real>2.1333329999999999</real>
+      <key>yard^3/hour</key>
+      <real>0.2970679</real>
+      <key>yard^3/minute</key>
+      <real>0.0049511319999999996</real>
+      <key>yard^3/second</key>
+      <real>8.2518860000000004e-05</real>
+    </dict>
+  </dict>
 </plist>
