--- a/Conversion Master_dev/Resources/LightData.plist
+++ b/Conversion Master_dev/Resources/LightData.plist
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <!--
-   AccelerationData.plist
-   Conversion Master_dev
-
-   Created by Seth Cohen on 1/8/17.
-   Copyright (c) 2017 Seth Cohen. All rights reserved.
--->
+ LightData.plist
+ Conversion Master_dev
+ 
+ Created by Seth Cohen on 1/8/17.
+ Copyright (c) 2017 Seth Cohen. All rights reserved.
+ -->
 <plist version="1.0">
+  <dict>
+    <key>converter</key>
+    <string>gain</string>
+    <key>basis</key>
+    <string>lux</string>
+    <key>map</key>
     <dict>
-    
+      <key>centimeter-candle</key>
+      <real>0.0001</real>
+      <key>flame</key>
+      <real>0.023225760000000002</real>
+      <key>foot-candle</key>
+      <real>0.092903040000000006</real>
+      <key>lumen/cm^2</key>
+      <real>0.0001</real>
+      <key>lumen/ft^2</key>
+      <real>0.092902999999999999</real>
+      <key>lux (lumen/m^2)</key>
+      <real>1</real>
+      <key>meter-candle</key>
+      <real>1</real>
+      <key>nox</key>
+      <real>1000</real>
+      <key>phot</key>
+      <real>0.0001</real>
+      <key>watt/cm^2</key>
+      <real>1.46412884334e-07</real>
     </dict>
+  </dict>
 </plist>
