--- a/Conversion Master_dev/Resources/AccelerationData.plist
+++ b/Conversion Master_dev/Resources/AccelerationData.plist
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <!--
-   AccelerationData.plist
-   Conversion Master_dev
-
-   Created by Seth Cohen on 1/8/17.
-   Copyright (c) 2017 Seth Cohen. All rights reserved.
--->
+ AccelerationData.plist
+ Conversion Master_dev
+ 
+ Created by Seth Cohen on 1/8/17.
+ Copyright (c) 2017 Seth Cohen. All rights reserved.
+ -->
 <plist version="1.0">
+  <dict>
+    <key>converter</key>
+    <string>gain</string>
+    <key>basis</key>
+    <string>G</string>
+    <key>map</key>
     <dict>
-    
+      <key>G</key>
+      <real>1</real>
+      <key>centimeter/sec^2</key>
+      <real>980.6688</real>
+      <key>foot/sec^2</key>
+      <real>32.17417</real>
+      <key>meter/sec^2</key>
+      <real>9.806649999999999</real>
+      <key>mile/hour second</key>
+      <real>21.93689</real>
+      <key>millimeter/sec^2</key>
+      <real>9806.688</real>
     </dict>
+  </dict>
 </plist>
