--- a/Conversion Master_dev/Resources/ForceData.plist
+++ b/Conversion Master_dev/Resources/ForceData.plist
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <!--
-   AccelerationData.plist
-   Conversion Master_dev
-
-   Created by Seth Cohen on 1/8/17.
-   Copyright (c) 2017 Seth Cohen. All rights reserved.
--->
+ ForceData.plist
+ Conversion Master_dev
+ 
+ Created by Seth Cohen on 1/8/17.
+ Copyright (c) 2017 Seth Cohen. All rights reserved.
+ -->
 <plist version="1.0">
+  <dict>
+    <key>converter</key>
+    <string>gain</string>
+    <key>basis</key>
+    <string>newton</string>
+    <key>map</key>
     <dict>
-    
+      <key>dyne</key>
+      <real>100000</real>
+      <key>gram force</key>
+      <real>101.9716</real>
+      <key>kilogram force</key>
+      <real>0.1019716</real>
+      <key>kilonewton</key>
+      <real>0.001</real>
+      <key>millinewton</key>
+      <real>1000</real>
+      <key>newton</key>
+      <real>1</real>
+      <key>ounce-force</key>
+      <real>3.596943</real>
+      <key>pound-force</key>
+      <real>0.22480890000000001</real>
     </dict>
+  </dict>
 </plist>
