--- a/Conversion Master_dev/Resources/Volume-DryData.plist
+++ b/Conversion Master_dev/Resources/Volume-DryData.plist
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <!--
- AccelerationData.plist
+ Volume-DryData.plist
  Conversion Master_dev
  
  Created by Seth Cohen on 1/8/17.
