Conversions to 4 significant figures. Highlight BG on selecting and navigation, all added.

--- a/Conversion Master_dev/Resources/TemperatureData.plist
+++ b/Conversion Master_dev/Resources/TemperatureData.plist
@@ -10,7 +10,7 @@
 <plist version="1.0">
   <dict>
     <key>converter</key>
-    <string>gainOffset</key>
+    <string>gainOffset</string>
     <key>basis</key>
     <string>Celsius</string>
     <key>map</key>
